# KMC-For-Vacancy-Migration

./: .gitignore
cmake/: CMakeLists.txt
examples/: input.txt  job.KMC
python/: generate_rate_compare_table.py
src/: Coord.cpp  Coord.h  Event.cpp  Event.h  LKMCRun.cpp  LKMCRun.h  Object.cpp  Object.h  Vector2d.cpp  Vector2d.h  main.cpp  phyconst.h
